--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@ body {
         "Droid Sans", "Helvetica Neue", sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    /* background-color: #eee; */
+    background-color: #f7f7f7;
 }
 
 #root {
